--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "team-knowledge-hub-backend": "file:"
   },
@@ -23,7 +24,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.22"
   },
   "author": "",
   "license": "ISC"
